--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 
-<audio id="bgMusic" src="music.mp3" loop></audio>
+<audio id="bgMusic" src="She_Him_-_I_Thought_I_Saw_Your_Face_Today_(mp3.pm).mp3" loop></audio>
 
 <script src="script.js"></script>
 </body>
